Fix margin issue to have page fit the whole screen and not overlap

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -31,13 +31,18 @@ a:hover {
 hr {
     border: 1px solid var(--color, #000);
     border-radius: 1px;
-    width: 100%;
+    width: 95%;
     margin-left: 0;
 }
 
 hr.thick {
     border-width: 2px;
-    margin: 10px 0;
+    margin: 15px 0;
+    width: 100%;
+}
+
+article {
+    padding: 3.5em 6em;
 }
 
 .body {
@@ -46,7 +51,6 @@ hr.thick {
     width: 100%;
     height: 100%;
     min-height: 100vh;
-    padding: 4em;
     background-color: var(--bg-color, #fff);
     color: var(--color, #000);
     transition: 250ms;
@@ -62,7 +66,7 @@ div.column {
 }
 
 div.label {
-    margin: 0.3em 0;
+    margin: 0.4em 0 0.2em 0;
 }
 
 input, textarea {
@@ -113,11 +117,11 @@ input, textarea {
 }
 
 button[type='submit'] {
-    margin: 0.3em 0;
+    margin-top: 0.4em;
     color: var(--color, #000);
     appearance: none;
     background-color: var(--bg-color, #fff);
-    border: 2px solid #1A1A1A;
+    border: 2px solid var(--color, #000);
     border-radius: 15px;
     box-sizing: border-box;
     cursor: pointer;
